Updating to Web HW

--- a/comparison.html
+++ b/comparison.html
@@ -24,6 +24,8 @@
 
 <body>
 
+  <a name="top"></a>
+
   <!-- Navigation -->
   <nav class="navbar navbar-expand-lg navbar-dark py-lg-4" id="mainNav">
     <div class="container">
@@ -34,12 +36,12 @@
       </button>
       <div class="collapse navbar-collapse" id="navbarResponsive">
         <ul class="navbar-nav mx-auto">
-          <li class="nav-item active px-lg-4">
+          <li class="nav-item px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="index.html">Home
               <span class="sr-only">(current)</span>
             </a>
           </li>
-          <li class="nav-item px-lg-4">
+          <li class="nav-item active px-lg-4">
             <a class="nav-link text-uppercase text-expanded" href="comparison.html">Comparison</a>
           </li>
           <li class="nav-item dropdown px-lg-4">
@@ -63,30 +65,34 @@
 
   <section class="page-section">
     <div class="container-fluid">
-        <div class="row justify-content-start">
+      <div class="bg-faded rounded p-5">
+        <h2 class="section-heading mb-3">
+          <span class="section-heading-upper">Comparison</span>
+          <span class="section-heading-lower">Latitude VS. X</span>
+        </h2>
+        <div class="row">
           <div class="col-md-6">
             <img class="img-fluid" src="./assets/img/Fig1.png" alt="fig1">
           </div>
           <div class="col-md-6">
-            <div class="bg-faded rounded p-5">
-              <h2 class="section-heading mb-3">
-                <span class="section-heading-upper">Summary</span>
-                <span class="section-heading-lower">Latitude VS. X</span>
-              </h2>
-              <p class="mb-5">The purpose of this project was to analyze how weather changes as you get closer to the equator. To accomplish this analysis, we first pulled data from the OpenWeatherMap API to assemble a dataset on over 500 cities.</p>
-              <p class="mb-5">After assembling the dataset, we used Matplotlib to plot various aspects of the weather vs. latitutde. Factors we examined included: temperature, cloudiness, wind speed, and humidity. This site provides the source data and visualizations created as part of the analysis, as well as explanations and descriptions of any trends and correlations witnessed.</p>
-            </div>
+            <img class="img-fluid" src="./assets/img/Fig2.png" alt="fig2">
+          </div>
+        </div><br>
+        <div class="row">
+          <div class="col-md-6">
+            <img class="img-fluid" src="./assets/img/Fig3.png" alt="fig3">
+          </div>
+          <div class="col-md-6">
+            <img class="img-fluid" src="./assets/img/Fig4.png" alt="fig4">
+          </div>
+          <div class="col-md-6">
           </div>
         </div>
       </div>
     </div>
   </section>
 
-  <section class="page-section">
-    <div class="container-fluid">
-      
-    </div>
-  </section>
+  <a href="#top"><p style="position: relative;text-align: right;font-size: 16px;padding-right: 2%;">Back To Top</p></a>
 
   <footer class="footer text-faded text-center py-5">
     <div class="container">
